# schemati

./: .cursorrules  .env.template  .gitignore  .pre-commit-config.yaml  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  run_frontend.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  validate.yml
backend/: config.py  exceptions.py  logging.py
backend/databricks/: __init__.py  volume.py
backend/documents/: __init__.py  document.py  factory.py  fragmenter.py
backend/llm/: README.md  __init__.py  document_parser.py  openai_client.py  prompt_loader.py
backend/llm/prompts/: extract_data.prompt
backend/models/: document.py
backend/routers/: volume.py
backend/routers/factories/: document_factory.py
backend/tests/: test_auth.py  test_ci.py  test_config.py  test_document_factory.py  test_fragmenter.py  test_llm.py  test_llm_integration.py  test_logging.py  test_volume.py  test_volume_new.py
docs/: frontend-development.md  repository-setup.md
examples/: volume_usage.py
frontend/: README.md  __init__.py  app.py  test_app.py  test_frontend_integration.py  test_tile_boundaries.py
